style.css
/* 
CS Brand Colors:
  Dark pink -- color: #a50a51
  Dark blue -- color: #0494cb
  Light blue -- color: #12b5ea
  Dark green -- color: #558920
  Light green -- color: #86af15
  Orange -- color: #ff6f0c
  Light Orange -- color: #FF9520
  Gray -- color: #636467
*/

body {
  font-family: 'Raleway';
  margin: 6px;
  color: white;
}

#all-cols {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#rows {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 0fr;
}

#col2,
#col3 {
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.square {
  margin: 0px;
}

.topline {
  font-family: 'Asap Condensed', sans-serif;
  font-size: 65px;
  font-weight: 900;
}

.stat {
  margin: 5%;
  position: relative;
}


#communities {
  background-color: #ff6f0c;
}

#communities-stat {
  display: grid;
  grid-template-columns: 0.5fr 3fr 2fr;
  column-gap: 15px;
}

.communities-list {
  overflow: scroll;
  font-weight: 600;
  padding: 2%;
  background-color: white;
  font-family: 'Asap Condensed', sans-serif;
  font-size: 12px;
  column-count: 2;
  color: rgb(22, 22, 22);
}

.communities-list > text {
  line-height: 13px;
  padding: 2px;
  margin: 5px 10px;
}

.communities-list-btn {
  font-family: Raleway;
  font-weight: 900;
  background-color: white;
  border: 1px solid white;
  color: #a50a51;
  padding: 10px;
  font-size: 14px;
  margin: 15% 0%;
  float: right;
  box-shadow: 5px 5px #a50a51;
  outline: none;
}

.communities-list-btn:hover {
  background-color: #FF9520;
  border: 1px solid #FF9520;
  cursor: pointer;
  color: white;
}


.square {
  background-position: center;
  background-origin: content-box;
  background-size: 325px;
  background-repeat: no-repeat;
}

#vet-ended {
  background-color: #a50a51;
  background-image: url("assets/01-vet.png");
}

#reduction {
  background-color: #558920;
  background-image: url("assets/02-reduction.png");
}

#housed {
  background-color: #12b5ea;
  background-image: url("assets/03-housed.png");
}

#quality-data {
  background-color: #0494cb;
  background-image: url("assets/04-quality.png");

}

.map-tooltip {
  color: white;
  padding: 1%;
  border: solid 1px white;
  max-width: 400px;
}

.list-tooltip {
  font-family: 'Asap Condensed', sans-serif;
  font-size: 12px;
  color: #a50a51;
  background-color: white;
  box-shadow: 2px 2px #a50a51;
  max-width: 400px;
}

#title-head {
  font-family: 'Asap Condensed', sans-serif;
  font-weight: 700;
  font-size: 77px;
  margin: 1% 15% 0% 5%;
  line-height: 75px;
}

#subtitle-head {
  margin: 1% 15% 5% 5.5%;
}

#communities-topline {
  font-family: 'Asap Condensed', sans-serif;
  font-size: 90px;
}

.stat span {
  position: absolute;
  top: 25vh;
  left: 0;
}

.hide {
  position: absolute;
  top: -9999px !important;
  left: -9999px !important;
}

.veteran-dot {
  font-weight: 400;
  color: #12b5ea;
  font-size: 11px;
}

.chronic-dot {
  font-weight: 400;
  color: #FF9520;
  font-size: 11px;
}



/* MEDIA BREAKPOINTS */

@media only screen and (max-width: 1280px) {

  .square {
    margin: 0px;
    min-height: 45%;
    background-size: 325px;
    background-position: top;
  }

  #title-head {
    font-size: 55px;
  }

  #communities-subtitle {
    float: none;
    transform: translateY(25px);
    padding: 0% 0% 0% 5%;
  }

  .stat span {
    position: absolute;
    top: 20vh;
    left: 0;
  }
}


@media only screen and (max-width: 768px) {

  .square {
    margin: 0px;
    background-position: center;
    background-size: 230px;
  }

  #title-head {
    font-size: 45px;
  }

  .topline {
    font-family: 'Asap Condensed', sans-serif;
    font-size: 45px;
    font-weight: 900;
  }

  .subtitle,
  #subtitle-head {
    font-size: 12px;
  }

  #communities-topline {
    font-family: 'Asap Condensed', sans-serif;
    font-size: 80px;
  }

  #subtitle-head {
    transform: translateY(-10px)
  }

  .stat span {
    position: absolute;
    top: 14vh;
    left: 0;
  }

}

@media only screen and (max-width: 615px) {

  #all-cols {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0fr 1fr;
  }

  #rows {
    display: grid;
    grid-template-columns: 1fr;
  }

  .square {
    margin: 0px;
    min-height: 150px;
    background-position: top;
    background-size: 100%;
  }

  #title-head {
    font-size: 45px;
  }

  .stat span {
    position: absolute;
    top: 5vh;
    left: 0;
  }

}

@media only screen and (max-width: 400px) {

  #all-cols {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0fr 1fr;
  }

  #rows {
    display: grid;
    grid-template-columns: 1fr;
  }

  .square {
    margin: 0px;
    min-height: 100px;
    background-position: top;
    background-size: 100%;
  }

  #title-head {
    font-size: 45px;
  }

  .stat span {
    position: absolute;
    top: 0vh;
    left: 0;
  }
}

@media only screen and (max-width: 400px) {

  #all-cols {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0fr 1fr;
  }

  #rows {
    display: grid;
    grid-template-columns: 1fr;
  }

  .square {
    margin: 0px;
    min-height: 100px;
    background-position: top;
    background-size: 100%;
  }

  #title-head {
    font-size: 45px;
  }

  .stat span {
    position: absolute;
    top: 0vh;
    left: 0;
  }

}

@media only screen and (max-width: 375px) {

  #all-cols {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0fr 1fr;
  }

  #rows {
    display: grid;
    grid-template-columns: 1fr;
  }

  .square {
    margin: 0px;
    min-height: 100px;
    background-position: top;
    background-size: 100%;
  }


  #title-head {
    font-size: 45px;
    line-height: 40px;
    margin: 5%;
  }

  .stat span {
    position: absolute;
    top: 0vh;
    left: 0;
  }

}

